Formatting: Changed formatting structure
Package: notepad@1.0.0
Contact: Sam Christy <samchristywork@gmail.com>

--- a/notepad.glade
+++ b/notepad.glade
@@ -60,6 +60,15 @@
                       </object>
                     </child>
                     <child>
+                      <object class="GtkImageMenuItem" id="close">
+                        <property name="label">gtk-close</property>
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="use-underline">True</property>
+                        <property name="use-stock">True</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkSeparatorMenuItem">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
