Minor change: Set default expansion to FALSE
By default, the output area should not be expanded.

Package: notepad@1.0.0
Contact: Sam Christy <samchristywork@gmail.com>

--- a/notepad.glade
+++ b/notepad.glade
@@ -265,7 +265,7 @@
               <object class="GtkTextView" id="output">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
-                <property name="vexpand">True</property>
+                <property name="vexpand">False</property>
                 <property name="editable">False</property>
                 <property name="monospace">True</property>
               </object>
