Feature: Added button to change the build command
Package: notepad@1.0.0
Contact: Sam Christy <samchristywork@gmail.com>

--- a/notepad.glade
+++ b/notepad.glade
@@ -209,6 +209,19 @@
               </packing>
             </child>
             <child>
+              <object class="GtkButton" id="select-build-command">
+                <property name="label" translatable="yes">Build Command</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkButton" id="output-show-hide">
                 <property name="label" translatable="yes">...</property>
                 <property name="visible">True</property>
@@ -218,7 +231,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </object>
